--- a/index.html
+++ b/index.html
@@ -42,7 +42,192 @@
               </div>
             </div>
           </div>
-            <header id="cuerpo">
+          <div id=barra></div>
+          <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!--  <header id="cuerpo">
                 <div class="critica">
                     <ul>
                      <div class="imagen">
@@ -56,7 +241,7 @@
      
                      </ul>
                 </div>
-             </header>
+             </header>-->
         </header>
         <div id="boton">
             <i class="fas fa-chevron-up"></i>
