--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <head>
     <title>Mi Primer Sitio Web</title>
     <link rel="stylesheet" href="css/main.css">
@@ -42,7 +43,9 @@
               </div>
             </div>
           </div>
-          <div id=barra></div>
+          <a id="buscador">busca una peli   <input onkeyup="getanswer(document.getElementById('qurybox').value)" id="qurybox">
+            <div id="answer"></div></a>
+          <div id=criticas>
           <div class="card mb-3" style="max-width: 740px;">
             <div class="row no-gutters">
               <div class="col-md-4">
@@ -57,6 +60,163 @@
               </div>
             </div>
           </div>
+          <div class="card mb-3" style="max-width: 740px;"></div>
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+           <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> <div class="card mb-3" style="max-width: 740px;">
+            <div class="row no-gutters">
+              <div class="col-md-4">
+                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div> 
           <div class="card mb-3" style="max-width: 740px;">
             <div class="row no-gutters">
               <div class="col-md-4">
@@ -70,163 +230,8 @@
                 </div>
               </div>
             </div>
-          </div> <div class="card mb-3" style="max-width: 740px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div> <div class="card mb-3" style="max-width: 740px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div> <div class="card mb-3" style="max-width: 740px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div> <div class="card mb-3" style="max-width: 740px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div> <div class="card mb-3" style="max-width: 740px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div> <div class="card mb-3" style="max-width: 740px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div> <div class="card mb-3" style="max-width: 740px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div> <div class="card mb-3" style="max-width: 740px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div> <div class="card mb-3" style="max-width: 740px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div> <div class="card mb-3" style="max-width: 740px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div> <div class="card mb-3" style="max-width: 740px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
-          </div> <div class="card mb-3" style="max-width: 740px;">
-            <div class="row no-gutters">
-              <div class="col-md-4">
-                <img src="img/witcher-cartel.jpg" class="card-img" alt="...">
-              </div>
-              <div class="col-md-8">
-                <div class="card-body">
-                  <h5 class="card-title">La primera temporada <p>de The Witcher</p></h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                </div>
-              </div>
-            </div>
           </div>
+        </div>
           <!--  <header id="cuerpo">
                 <div class="critica">
                     <ul>
